--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "express-handlebars": "^5.3.0",
     "express-session": "^1.17.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "prettier": "^2.2.1",
     "run": "^1.4.0",
     "seed": "^0.4.4",
     "sequelize": "^6.6.2"
-  }
+  },
+  "devDependencies": {}
 }
